--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "6.9.4"
+  },
+  
   "author": "",
   "license": "ISC",
   "dependencies": {
